# template-python-package

./: .pre-commit-config.yaml  README.md  cookiecutter.json  requirements.txt
.github/workflows/: python-build.yml
hooks/: post_gen_project.py
{{cookiecutter.module_name}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.module_name}}/.github/workflows/: python-build.yml  python-publish.yml
{{cookiecutter.module_name}}/src/{{cookiecutter.module_name}}/: main.py
{{cookiecutter.module_name}}/tests/: test_init.py
